[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/LevelThree.gd" type="Script" id=1]
[ext_resource path="res://assets/images/level_three.png" type="Texture" id=2]
[ext_resource path="res://assets/images/white_tile.png" type="Texture" id=3]
[ext_resource path="res://src/Egg.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/PauseScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/PauseButton.tscn" type="PackedScene" id=7]

[node name="LevelThree" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteBackground" type="Sprite" parent="."]
position = Vector2( 487.474, 295.672 )
scale = Vector2( 20.35, 10.5931 )
texture = ExtResource( 3 )

[node name="Art" type="Sprite" parent="."]
position = Vector2( 486.059, 296.357 )
scale = Vector2( 0.438908, 0.382217 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Eggs" type="YSort" parent="."]

[node name="RainbowEgg" parent="Eggs" instance=ExtResource( 4 )]
position = Vector2( 312.57, 236.172 )
rotation = 1.83736
scale = Vector2( 2.91032, -3.4781 )

[node name="BrickEgg" parent="Eggs" instance=ExtResource( 4 )]
position = Vector2( 670.248, 476.751 )
rotation = -3.04404
scale = Vector2( 3.88625, -3.95106 )
ID = "brick"

[node name="WelcomeEgg" parent="Eggs" instance=ExtResource( 4 )]
position = Vector2( 529.505, 545.807 )
rotation = 0.0975482
scale = Vector2( 1.21533, 0.980007 )
ID = "welcome"

[node name="FlowerEgg" parent="Eggs" instance=ExtResource( 4 )]
position = Vector2( 296.527, 547.848 )
rotation = 0.0975482
scale = Vector2( 2.46239, 1.71593 )
ID = "flower"

[node name="SunEgg" parent="Eggs" instance=ExtResource( 4 )]
position = Vector2( 228.711, 67.6736 )
rotation = 0.0975482
scale = Vector2( 2.46239, 1.71593 )
ID = "sun"

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="PauseScreen" parent="." instance=ExtResource( 6 )]
visible = false

[node name="PauseButton" parent="." instance=ExtResource( 7 )]
margin_left = 30.4033
margin_top = 483.898
margin_right = 381.403
margin_bottom = 787.898
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="on_PlayButton_pressed" from="PauseScreen" to="." method="_on_PauseScreen_on_PlayButton_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
